SET(DBLIB_SOURCES DbCsv.cpp DbOledb.cpp DbOdbc.cpp)

if (USE_SQLITE_2)
	SET(DBLIB_SOURCES ${DBLIB_SOURCES} DbSqlite2.cpp)
endif (USE_SQLITE_2)

if (USE_SQLITE_3)
	SET(DBLIB_SOURCES ${DBLIB_SOURCES} DbSqlite3.cpp)
endif (USE_SQLITE_3)

ADD_LIBRARY(dblib ${DBLIB_SOURCES})


#INSTALL_TARGETS(${INSTALL_LIBDIR} dblib ${SQLLITE2_SOURCES} ${SQLLITE3_SOURCES})